demos/pod-autoscalers/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-autoscalers
spec:
  selector:
    app: pod-autoscalers
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
